SELECT element: Do not update popup content if CharacterData or attribute value is not changed.

BUG=667148

Review-Url: https://codereview.chromium.org/2568333004
Cr-Commit-Position: refs/heads/master@{#438462}